# boost.simd

./: better.small.pack.todo  pair.todo
bench/type/complex/scalar/: CMakeLists.txt
bench/type/complex/scalar/abs/: CMakeLists.txt  regular.double.m10_10.cpp  regular.float.m10_10.cpp
bench/type/complex/scalar/acos/: CMakeLists.txt  real.double.m10_10.cpp  regular.double.m10_10.cpp  regular.float.m10_10.cpp
bench/type/complex/scalar/acosh/: CMakeLists.txt  real.float.m10_10.cpp  regular.double.m10_10.cpp  regular.float.m10_10.cpp
bench/type/complex/scalar/arg/: CMakeLists.txt  regular.double.m10_10.cpp  regular.float.m10_10.cpp
bench/type/complex/scalar/asin/: CMakeLists.txt  real.double.m10_10.cpp  real.float.m10_10.cpp  regular.double.m10_10.cpp  regular.float.m10_10.cpp
bench/type/complex/scalar/asinh/: CMakeLists.txt  regular.double.m10_10.cpp  regular.float.m10_10.cpp
bench/type/complex/scalar/atan/: CMakeLists.txt  regular.double.m10_10_m10_10.cpp  regular.float.m10_10_m10_10.cpp
bench/type/complex/scalar/atanh/: CMakeLists.txt  real.double.m10_10.cpp  real.float.m10_10.cpp  regular.double.m10_10.cpp  regular.float.m10_10.cpp
bench/type/complex/scalar/conj/: CMakeLists.txt  regular.double.m10_10.cpp  regular.float.m10_10.cpp
bench/type/complex/scalar/cos/: CMakeLists.txt  regular.double.m10_10.cpp  regular.float.m10_10.cpp
bench/type/complex/scalar/cosh/: CMakeLists.txt  regular.double.m10_10.cpp  regular.float.m10_10.cpp
bench/type/complex/scalar/divides/: CMakeLists.txt  regular.double.m10_10_m10_10.cpp  regular.float.m10_10_m10_10.cpp
bench/type/complex/scalar/exp/: CMakeLists.txt  regular.double.m10_10.cpp  regular.float.m10_10.cpp
bench/type/complex/scalar/exp_i/: CMakeLists.txt  real.double.m10_10.cpp  real.float.m10_10.cpp  regular.double.m10_10.cpp  regular.float.m10_10.cpp
bench/type/complex/scalar/exp_ipi/: CMakeLists.txt  real.double.m10_10.cpp  real.float.m10_10.cpp  regular.double.m10_10.cpp  regular.float.m10_10.cpp
bench/type/complex/scalar/if_else/: CMakeLists.txt  regular.double.m10_10_m10_10_m10_10.cpp  regular.float.m10_10_m10_10_m10_10.cpp
bench/type/complex/scalar/imag/: CMakeLists.txt  regular.double.m10_10.cpp  regular.float.m10_10.cpp
bench/type/complex/scalar/is_equal/: CMakeLists.txt  regular.double.m10_10_m10_10.cpp  regular.float.m10_10_m10_10.cpp
bench/type/complex/scalar/is_eqz/: CMakeLists.txt  regular.double.m10_10.cpp  regular.float.m10_10.cpp
bench/type/complex/scalar/is_finite/: CMakeLists.txt  regular.double.m10_10.cpp  regular.float.m10_10.cpp
bench/type/complex/scalar/is_imag/: CMakeLists.txt  regular.double.m10_10.cpp  regular.float.m10_10.cpp
bench/type/complex/scalar/is_inf/: CMakeLists.txt  regular.double.m10_10.cpp  regular.float.m10_10.cpp
bench/type/complex/scalar/is_invalid/: CMakeLists.txt  regular.double.m10_10.cpp  regular.float.m10_10.cpp
bench/type/complex/scalar/is_nan/: CMakeLists.txt  regular.double.m10_10.cpp  regular.float.m10_10.cpp
bench/type/complex/scalar/is_not_equal/: CMakeLists.txt  regular.double.m10_10_m10_10.cpp  regular.float.m10_10_m10_10.cpp
bench/type/complex/scalar/is_real/: CMakeLists.txt  regular.double.m10_10.cpp  regular.float.m10_10.cpp
bench/type/complex/scalar/ldexp/: CMakeLists.txt  regular.double.N.cpp  regular.double.m10_10_m10_10.cpp  regular.float.N.cpp  regular.float.m10_10_m10_10.cpp
bench/type/complex/scalar/log/: CMakeLists.txt  real.double.m10_10.cpp  real.float.m10_10.cpp  regular.double.m10_10.cpp  regular.float.m10_10.cpp
bench/type/complex/scalar/log10/: CMakeLists.txt  real.double.m10_10.cpp  real.float.m10_10.cpp  regular.double.m10_10.cpp  (+1 more)
bench/type/complex/std/: CMakeLists.txt
doc/: Doxyfile.in
(+3223 files in other folders)
