## -------------------------------------------------------------------------------------------------
##                              Copyright 2017 - NumScale SAS
##
##                   Distributed under the Boost Software License, Version 1.0.
##                        See accompanying file LICENSE.txt or copy at
##                            http://www.boost.org/LICENSE_1_0.txt
## -------------------------------------------------------------------------------------------------

add_subdirectory(cos)
add_subdirectory(sqr_abs)
add_subdirectory(sqrt)


