## -------------------------------------------------------------------------------------------------
##                              Copyright 2017 - NumScale SAS
##
##                   Distributed under the Boost Software License, Version 1.0.
##                        See accompanying file LICENSE.txt or copy at
##                            http://www.boost.org/LICENSE_1_0.txt
## -------------------------------------------------------------------------------------------------


add_subdirectory(abs)
add_subdirectory(acos)
add_subdirectory(acosh)
add_subdirectory(asin)
add_subdirectory(arg)
add_subdirectory(asinh)
add_subdirectory(atan)
add_subdirectory(atanh)
add_subdirectory(conj)
add_subdirectory(cos)
add_subdirectory(cosh)
add_subdirectory(divides)
add_subdirectory(exp)
add_subdirectory(exp_i)
add_subdirectory(exp_ipi)
add_subdirectory(if_else)
add_subdirectory(imag)
add_subdirectory(is_equal)
add_subdirectory(is_eqz)
add_subdirectory(is_finite)
add_subdirectory(is_imag)
add_subdirectory(is_inf)
add_subdirectory(is_invalid)
add_subdirectory(is_nan )
add_subdirectory(is_not_equal)
add_subdirectory(is_real)
add_subdirectory(ldexp)
add_subdirectory(log)
add_subdirectory(log10)
add_subdirectory(minus)
add_subdirectory(multiplies)
add_subdirectory(mul_i)
add_subdirectory(mul_mi)
add_subdirectory(plus)
add_subdirectory(polar)
add_subdirectory(pow)
add_subdirectory(proj)
add_subdirectory(real)
add_subdirectory(sin)
add_subdirectory(sinh)
add_subdirectory(sqr)
add_subdirectory(sqr_abs)
add_subdirectory(sqrt)
add_subdirectory(tan)
add_subdirectory(tanh)
add_subdirectory(unary_minus)
add_subdirectory(unary_plus)

